first-results/updria_all_mcmt_no_diagrams/test_all_mcmt_no_diagrams/MIS.in.stats
group: test_all_mcmt_no_diagrams
platform: Linux node1 5.4.0-56-generic #62-Ubuntu SMP Mon Nov 23 19:20:19 UTC 2020 x86_64 x86_64
timestamp: 1669744865
time: 2022-11-29 19:01:05
exitcode: 0
real: 1.02
user: 0.2
sys: 0.02
